Fix navbar on mobile

--- a/src/components/shared/navbar/Navbar.css
+++ b/src/components/shared/navbar/Navbar.css
@@ -120,7 +120,7 @@ nav {
     }
 
     .show {
-        height: 360px;
+        height: 500px;
     }
 
     nav .show {
